--- a/src/Vts.Gui.Silverlight/packages.config
+++ b/src/Vts.Gui.Silverlight/packages.config
@@ -10,5 +10,12 @@
   <package id="Rx-Main" version="2.1.30214.0" targetFramework="sl50" />
   <package id="Rx-PlatformServices" version="2.1.30214.0" targetFramework="sl50" />
   <package id="Rx-Xaml" version="2.1.30214.0" targetFramework="sl50" />
+  <package id="SilverlightToolkit-All" version="4.2010.4" targetFramework="sl50" />
+  <package id="SilverlightToolkit-Core" version="4.2010.4" targetFramework="sl50" />
+  <package id="SilverlightToolkit-Data" version="4.2010.4" targetFramework="sl50" />
+  <package id="SilverlightToolkit-DataViz" version="4.2010.4" targetFramework="sl50" />
+  <package id="SilverlightToolkit-Input" version="4.2010.4" targetFramework="sl50" />
+  <package id="SilverlightToolkit-Layout" version="4.2010.4" targetFramework="sl50" />
+  <package id="SilverlightToolkit-Theming" version="4.2010.4" targetFramework="sl50" />
   <package id="Unity" version="2.1.505.2" targetFramework="sl50" />
 </packages>
