MC: Modified SimulationOptions to have IPhaseFunctionInput rather than PhaseFunctionType. Updated SimulationInput and SimulationInputProvider accordingly, but still need to update unit tests.
--HG--
branch : jn-111104-lookup_phase_function

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -995,6 +995,9 @@
     <Compile Include="..\Vts\MonteCarlo\PhaseFunctions\LookupTablePhaseFunction.cs">
       <Link>MonteCarlo\PhaseFunctions\LookupTablePhaseFunction.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\PhaseFunctions\PolarAndAzimuthalPhaseFunction.cs">
+      <Link>MonteCarlo\PhaseFunctions\PolarAndAzimuthalPhaseFunction.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\Photon.cs">
       <Link>MonteCarlo\Photon.cs</Link>
     </Compile>
