--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -285,6 +285,7 @@
     </Compile>
     <Compile Include="MonteCarlo\Factories\VirtualBoundaryFactory.cs" />
     <Compile Include="MonteCarlo\Helpers\SourceProfiles\ArbitrarySourceProfile.cs" />
+    <Compile Include="MonteCarlo\Interfaces\ITissueRegionInput.cs" />
     <Compile Include="MonteCarlo\Interfaces\IHistoryDetector.cs" />
     <Compile Include="MonteCarlo\Interfaces\IDetectorController.cs" />
     <Compile Include="MonteCarlo\Interfaces\ILookupTablePhaseFunctionData.cs" />
