New forward solver omitted from last push.
--HG--
branch : ch-130710-multiregion_forward_solver

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -445,6 +445,9 @@
     <Compile Include="..\Vts\Modeling\ForwardSolvers\MonteCarloLoader.cs">
       <Link>Modeling\ForwardSolvers\MonteCarloLoader.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\Modeling\ForwardSolvers\MultiLayerSDAForwardSolver.cs">
+      <Link>Modeling\ForwardSolvers\MultiLayerSDAForwardSolver.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\Modeling\ForwardSolvers\NurbsForwardSolver.cs">
       <Link>Modeling\ForwardSolvers\NurbsForwardSolver.cs</Link>
     </Compile>
