Renamed MultiLayerSDAForwardSolver to TwoLayerSDAForwardSolver since it is implementing Kienle's 2-layer solution.  Modified header comments classes added last push to match signature.  First attempt at getting StationaryFluence and StationaryFlux implemented.
--HG--
branch : ch-130710-multiregion_forward_solver

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -445,9 +445,6 @@
     <Compile Include="..\Vts\Modeling\ForwardSolvers\MonteCarloLoader.cs">
       <Link>Modeling\ForwardSolvers\MonteCarloLoader.cs</Link>
     </Compile>
-    <Compile Include="..\Vts\Modeling\ForwardSolvers\MultiLayerSDAForwardSolver.cs">
-      <Link>Modeling\ForwardSolvers\MultiLayerSDAForwardSolver.cs</Link>
-    </Compile>
     <Compile Include="..\Vts\Modeling\ForwardSolvers\NurbsForwardSolver.cs">
       <Link>Modeling\ForwardSolvers\NurbsForwardSolver.cs</Link>
     </Compile>
@@ -1147,6 +1144,7 @@
     <Compile Include="..\Vts\MonteCarlo\VirtualBoundaries\SpecularReflectanceVirtualBoundary.cs">
       <Link>MonteCarlo\VirtualBoundaries\SpecularReflectanceVirtualBoundary.cs</Link>
     </Compile>
+    <Compile Include="Modeling\ForwardSolvers\TwoLayerSDAForwardSolver.cs" />
     <Compile Include="MonteCarlo\Unmanaged\UnmanagedDetectorDefinition.cs" />
     <Compile Include="MonteCarlo\Unmanaged\UnmanagedFlags.cs" />
     <Compile Include="MonteCarlo\Unmanaged\UnmanagedHistory.cs" />
