Added ReadFromJson/WriteToJson and supporting methods to Vts.IO.FileIO, which uses a new VtsJsonSerializer class. Added VtsJsonSerializerTests which demonstrates usage, including the necessary machinery for deserializing types hidden behind interfaces (requires custom step of instantiating the correct class). SimulationOptions can now be both serialized and deserialized, but more work is necessary to deserialize SimulationInput (remove "[IgnoreDataMember]" for enums (or change to strings) and assign in most derived constructor

--- a/src/Vts.Test/Vts.Test.csproj
+++ b/src/Vts.Test/Vts.Test.csproj
@@ -94,6 +94,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\tools\nunit\Silverlight\Microsoft.VisualStudio.QualityTools.UnitTesting.Silverlight.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.5.0.8\lib\portable-net40+sl4+wp7+win8\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="NUnit.Silverlight.Compatibility">
       <HintPath>..\..\tools\nunit\Silverlight\NUnit.Silverlight.Compatibility.dll</HintPath>
     </Reference>
@@ -161,6 +164,7 @@
     <Compile Include="Factories\SolverFactoryTests.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="IO\VtsJsonSerializerTests.cs" />
     <Compile Include="IO\FileIOTests.cs" />
     <Compile Include="Modeling\ForwardSolvers\BSplinesCoefficientsTests.cs">
       <SubType>Code</SubType>
