--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -61,6 +61,9 @@
     <Reference Include="MathNet.Numerics.IO">
       <HintPath>..\packages\MathNet.Numerics.2.4.0\lib\net40\MathNet.Numerics.IO.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.5.0.8\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=2.5.3.9345, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\tools\nunit\Desktop\framework\nunit.framework.dll</HintPath>
@@ -139,6 +142,9 @@
     </Compile>
     <Compile Include="..\Vts.Test\IO\FileIOTests.cs">
       <Link>IO\FileIOTests.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts.Test\IO\VtsJsonSerializerTests.cs">
+      <Link>IO\VtsJsonSerializerTests.cs</Link>
     </Compile>
     <Compile Include="..\Vts.Test\Modeling\ForwardSolvers\BSplinesCoefficientsTests.cs">
       <Link>Modeling\ForwardSolvers\BSplinesCoefficientsTests.cs</Link>
