--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -84,6 +84,9 @@
     <Reference Include="MPFitLib">
       <HintPath>..\packages\csmpfit.1.0.0\lib\net35\MPFitLib.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.5.0.8\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="NLog">
       <HintPath>..\packages\NLog.2.0.0.2000\lib\net40\NLog.dll</HintPath>
     </Reference>
@@ -396,6 +399,9 @@
     </Compile>
     <Compile Include="..\Vts\IO\StreamFinder.cs">
       <Link>IO\StreamFinder.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\IO\VtsJsonSerializer.cs">
+      <Link>IO\VtsJsonSerializer.cs</Link>
     </Compile>
     <Compile Include="..\Vts\Modeling\Analyzers\NumericalDerivativeExtensions.cs">
       <Link>Modeling\Analyzers\NumericalDerivativeExtensions.cs</Link>
