--- a/src/Vts.Test/packages.config
+++ b/src/Vts.Test/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="MathNet.Numerics" version="2.4.0" targetFramework="sl50" />
+  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="sl50" />
 </packages>
