--- a/src/Vts.Desktop/packages.config
+++ b/src/Vts.Desktop/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="3.1.0" targetFramework="net40" />
   <package id="CommonServiceLocator" version="1.0" targetFramework="net40" />
   <package id="csmpfit" version="1.0.0" targetFramework="net40" />
   <package id="DotNetZip" version="1.9.1.8" targetFramework="net40" />
