--- a/src/Vts/packages.config
+++ b/src/Vts/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="3.1.0" targetFramework="sl50" />
   <package id="CommonServiceLocator" version="1.0" targetFramework="sl50" />
   <package id="csmpfit" version="1.0.0" targetFramework="sl50" />
   <package id="MathNet.Numerics" version="2.4.0" targetFramework="sl50" />
