--- a/src/Vts.Desktop.Test/packages.config
+++ b/src/Vts.Desktop.Test/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="MathNet.Numerics" version="2.4.0" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net40" />
+  <package id="NUnit" version="2.6.3" targetFramework="net40" />
 </packages>
