GUI test: addition of MVVM Light references.

--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\Vts.Desktop.Test\packages.config" />
   <repository path="..\Vts.Desktop\packages.config" />
+  <repository path="..\Vts.Gui.Silverlight.Test\packages.config" />
   <repository path="..\Vts.Gui.Silverlight\packages.config" />
   <repository path="..\Vts.MonteCarlo.CommandLineApplication\packages.config" />
   <repository path="..\Vts.ReportForwardSolvers.Desktop\packages.config" />
